# ComfyUI-DiLightNet

./: README.md  __init__.py  pyproject.toml
example_workflows/: dilight_example_workflow.json
modules/: neural_texture_embedding.py
nodes/: load_dilight_controlnet_node.py  load_dilight_image_node.py  prepare_dilight_cond_node.py
